// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`config surface contract > keeps every field of the exportable visual config 1`] = `
[
  "backgroundOpacity",
  "cadenzaTuning",
  "cappellaTuning",
  "claddaghTuning",
  "classicTuning",
  "dioramaTuning",
  "disableVisualizerGeometricBackground",
  "disableVisualizerVignette",
  "followSystemTheme",
  "fumeTuning",
  "harmonySubtitleBackground",
  "hidePlayerTranslationSubtitle",
  "latentBackgroundTuning",
  "lumiereTuning",
  "lyricsCustomFontFamily",
  "lyricsFontFallbackFamilies",
  "lyricsFontScale",
  "lyricsFontStyle",
  "lyricsFontWeight",
  "monetBackgroundTuning",
  "monetTuning",
  "nomandBackgroundTuning",
  "partitaTuning",
  "pendoloTuning",
  "randomVisualizerModePerSong",
  "showHarmonySubtitle",
  "showSubtitleTranslation",
  "songThemeAutoGenerateEnabled",
  "songThemeAutoSwitchEnabled",
  "sonnetTuning",
  "soraBackgroundTuning",
  "stageTrackPillMode",
  "stageTrackPillOnHome",
  "stageTrackPillTimeoutSec",
  "staticMode",
  "subtitleContentMode",
  "subtitleFontFallbackFamilies",
  "subtitleFontFamily",
  "subtitleFontInheritsLyrics",
  "subtitleFontScale",
  "subtitleFontStyle",
  "subtitleFontWeight",
  "subtitleOverlayBackground",
  "subtitleOverlayOpacity",
  "subtitleUpcomingLyricsBlur",
  "temperaTuning",
  "themeGenerationSource",
  "tiltTuning",
  "urlBackgroundList",
  "urlBackgroundSelectedId",
  "useCoverColorBg",
  "visualizerBackgroundMode",
  "visualizerMode",
  "visualizerOpacity",
  "visualizerTunings",
]
`;

exports[`config surface contract > keeps every field of the synced visual settings document 1`] = `
[
  "backgroundOpacity",
  "cadenzaTuning",
  "cappellaTuning",
  "claddaghTuning",
  "classicTuning",
  "dioramaTuning",
  "followSystemTheme",
  "fumeTuning",
  "grid3dCardStyle",
  "hidePlayerTranslationSubtitle",
  "homeLayoutStyle",
  "latentBackgroundTuning",
  "lumiereTuning",
  "lyricsFontFallbackFamilies",
  "lyricsFontScale",
  "lyricsFontStyle",
  "lyricsFontWeight",
  "monetBackgroundTuning",
  "monetTuning",
  "nomandBackgroundTuning",
  "partitaTuning",
  "pendoloTuning",
  "randomVisualizerModePerSong",
  "showSubtitleTranslation",
  "sonnetTuning",
  "soraBackgroundTuning",
  "subtitleContentMode",
  "subtitleFontFallbackFamilies",
  "subtitleFontFamily",
  "subtitleFontInheritsLyrics",
  "subtitleFontStyle",
  "subtitleFontWeight",
  "subtitleOverlayBackground",
  "subtitleUpcomingLyricsBlur",
  "temperaTuning",
  "tiltTuning",
  "urlBackgroundList",
  "urlBackgroundSelectedId",
  "visualizerBackgroundMode",
  "visualizerMode",
  "visualizerOpacity",
  "visualizerTunings",
]
`;
